--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "mocha --recursive -w"
+    "test": "mocha --recursive --require test/js/util/mochaHelper.js",
+    "test-watch": "mocha --recursive --require test/js/util/mochaHelper.js -w",
+    "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter"
   },
   "author": "aditya-mittal",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
+    "mocha-jenkins-reporter": "^0.4.3",
     "nock": "^12.0.3",
     "sinon": "^9.0.2"
   },
