--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.2",
     "mocha-jenkins-reporter": "^0.4.3",
     "nock": "^12.0.3",
     "sinon": "^9.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "isomorphic-git": "^1.4.4"
   }
 }
