--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "migrate-repo",
   "version": "1.0.0",
   "description": "Migrates Gitlab repo(s) to Github",
-  "main": "main.js",
+  "main": "cli.js",
+  "bin": {
+    "gl2h": "./src/cli.js"
+  },
   "scripts": {
     "start": "node src/main.js",
     "test": "mocha --recursive --require test/js/util/mochaHelper.js",
@@ -10,6 +13,10 @@
     "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter"
   },
   "author": "aditya-mittal",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:aditya-mittal/migrate-gitlab-repo-to-github.git"
+  },
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
@@ -17,10 +24,14 @@
     "mocha": "^7.1.2",
     "mocha-jenkins-reporter": "^0.4.3",
     "nock": "^12.0.3",
+    "proxyquire": "^2.1.3",
     "sinon": "^9.0.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "isomorphic-git": "^1.4.4"
+    "commander": "^5.1.0",
+    "config": "^3.3.1",
+    "isomorphic-git": "^1.4.4",
+    "lodash": "^4.17.15"
   }
 }
