Fixed failing tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node src/main.js",
     "test": "mocha --recursive --require test/js/util/mochaHelper.js",
     "test-watch": "mocha --recursive --require test/js/util/mochaHelper.js -w",
-    "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter"
+    "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter",
+    "build": "npm install && npm link"
   },
   "author": "aditya-mittal",
   "repository": {
