--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "node src/main.js",
     "test": "mocha --recursive --require test/js/util/mochaHelper.js",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
-    "lint": "eslint --ignore-path .gitignore --fix .",
+    "lint": "eslint --ignore-path .gitignore .",
     "test-watch": "mocha --recursive --require test/js/util/mochaHelper.js -w",
     "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter",
-    "build": "npm lint && npm install && npm link"
+    "build": "npm install && npm link"
   },
   "author": "aditya-mittal",
   "repository": {
