--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter",
     "build": "npm install && npm link"
   },
+  "pre-commit": [
+    "lint",
+    "lint:fix",
+    "test"
+  ],
   "author": "aditya-mittal",
   "repository": {
     "type": "git",
@@ -28,6 +33,7 @@
     "mocha": "^7.1.2",
     "mocha-jenkins-reporter": "^0.4.3",
     "nock": "^12.0.3",
+    "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2"
   },
