Updated build & clean steps

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "test-watch": "mocha --recursive --require test/js/util/mochaHelper.js -w",
     "test-jenkins": "JUNIT_REPORT_PATH=./test_report.xml mocha --recursive --require test/js/util/mochaHelper.js --colors --reporter mocha-jenkins-reporter",
-    "build": "npm install && npm link"
+    "build": "npm install && npm link",
+    "clean": "npm unlink && npm uninstall"
   },
   "pre-commit": [
     "lint",
