--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node src/main.js",
-    "test": "mocha --recursive --require test/js/util/mochaHelper.js",
+    "test": "nyc --reporter=html --reporter=text mocha --recursive --require test/js/util/mochaHelper.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint-fix": "eslint --ignore-path .gitignore --fix .",
     "lint": "eslint --ignore-path .gitignore .",
     "test-watch": "mocha --recursive --require test/js/util/mochaHelper.js -w",
@@ -29,10 +30,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.1.0",
     "eslint": "^7.4.0",
     "mocha": "^7.1.2",
     "mocha-jenkins-reporter": "^0.4.3",
     "nock": "^12.0.3",
+    "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2"
