--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm run lint
     - run: npm test
+    - run: npm run coverage
+      env:
+        CODECOV_REPO_TOKEN: ${{ secrets.CODECOV_REPO_TOKEN }}
