--- a/test/resources/github/webhookTemplate.yml
+++ b/test/resources/github/webhookTemplate.yml
@@ -6,14 +6,14 @@ some-repo:
   payloadUrl: https://github-webhook-proxy/webhook?targetUrl=https://jenkins.some-jenkins.com/github-webhook/
 
 some-repo-1:
-  secret: some-secret
+  secret: some-secret-1
   events:
     - push
     - pull_request
   payloadUrl: https://github-webhook-proxy/webhook?targetUrl=https://jenkins.some-jenkins.com/github-webhook/
 
 some-repo-2:
-      secret: some-secret
+      secret: some-secret-2
       events:
         - push
         - pull_request
