--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.4.0",
     "mocha": "^7.1.2",
     "mocha-jenkins-reporter": "^0.4.3",
+    "mock-require": "^3.0.3",
     "nock": "^12.0.3",
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
@@ -45,6 +46,7 @@
     "commander": "^5.1.0",
     "config": "^3.3.1",
     "isomorphic-git": "^1.4.4",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "log4js": "^6.3.0"
   }
 }
